// file: proto/gcommon/v1/organization/remove_member_response.proto
// version: 1.0.0
// guid: 183c4904-d0fd-47bd-b54c-5be727d87cbd
edition = "2023";

package organization.v1;

import "commonpb/v1/error.proto";
import "google/protobuf/go_features.proto";
import "buf/validate/validate.proto";


option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/organizationpb";

message RemoveMemberResponse {
  // Any errors encountered
  repeated common.v1.Error errors = 1 [(buf.validate.field).repeated.min_items = 1];

  // Success status
  bool success = 2;
}
