// file: pkg/organization/proto/requests/add_member_request.proto

edition = "2023";

package gcommon.v1.organization;

import "pkg/common/proto/request_metadata.proto";
import "pkg/organization/proto/organization_member.proto";

option go_package = "github.com/jdfalk/gcommon/pkg/organization/proto";

message AddMemberRequest {
  // Request metadata for tracing and context
  gcommon.v1.common.RequestMetadata metadata = 1;

  // Organization identifier
  string organization_id = 2;

  // Member information to add
  gcommon.v1.organization.OrganizationMember member = 3;

  // Send invitation email if true
  bool send_invite = 4;
}
