// file: pkg/organization/proto/responses/create_organization_response.proto
edition = "2023";

package gcommon.v1.organization;

import "pkg/common/proto/error.proto";
import "pkg/organization/proto/organization.proto";
import "pkg/organization/proto/tenant.proto";
option go_package = "github.com/jdfalk/gcommon/pkg/organization/proto";

/**
 * CreateOrganizationResponse message returning the result of organization creation.
 * Contains the created organization and any related entities.
 */
message CreateOrganizationResponse {
  // Created organization
  Organization organization = 1;

  // Default tenant (if created)
  Tenant default_tenant = 2;

  // Organization member record for the owner
  string owner_member_id = 3;

  // Any errors encountered during creation
  repeated gcommon.v1.common.Error errors = 4;

  // Success status
  bool success = 5;

  // Additional information about the creation process
  string message = 6;
}
