// file: pkg/organization/proto/requests/delete_organization_request.proto
edition = "2023";

package gcommon.v1.organization;

import "google/protobuf/go_features.proto";
import "pkg/common/proto/jdfalk/gcommon/pkg/organization/proto;organizationpb";
option features.(pb.go).api_level = API_HYBRID;

message DeleteOrganizationRequest {
  // Request metadata for tracing and context
  gcommon.v1.common.RequestMetadata metadata = 1;
  
  // Organization identifier to delete
  string organization_id = 2;
}
