// file: pkg/organization/proto/responses/get_organization_response.proto
edition = "2023";

package gcommon.v1.organization;

import "google/protobuf/go_features.proto";
import "pkg/common/proto/error.proto";
import "pkg/organization/proto/proto/messages/error.proto";
import "pkg/organization/proto/proto/organization_settings.proto";

option features.(pb.go).api_level = API_OPAQUE;

/**
 * GetOrganizationResponse message returning organization information.
 */
message GetOrganizationResponse {
  // Organization information
  Organization organization = 1;

  // Organization settings (if requested)
  OrganizationSettings settings = 2;

  // Number of members in organization (if requested)
  int32 member_count = 3;

  // List of tenants in organization (if requested)
  repeated Tenant tenants = 4;

  // Any errors encountered during retrieval
  repeated gcommon.v1.common.Error errors = 5;

  // Success status
  bool success = 6;
}
