// file: pkg/organization/proto/requests/get_organization_settings_request.proto

edition = "2023";

package gcommon.v1.organization;

import "pkg/common/proto/request_metadata.proto";
option go_package = "github.com/jdfalk/gcommon/pkg/organization/proto";

message GetOrganizationSettingsRequest {
  // Request metadata for tracing and context
  gcommon.v1.common.RequestMetadata metadata = 1;

  // Organization identifier
  string organization_id = 2;
}
