// file: pkg/organization/proto/responses/get_organization_settings_response.proto
edition = "2023";

package gcommon.v1.organization;

import "pkg/common/proto/error.proto";
import "pkg/organization/proto/organization_settings.proto";

option go_package = "github.com/jdfalk/gcommon/pkg/organization/proto";

message GetOrganizationSettingsResponse {
  // Any errors encountered
  repeated gcommon.v1.common.Error errors = 1;

  // Success status
  bool success = 2;

  // Retrieved settings data
  gcommon.v1.organization.OrganizationSettings settings = 3 [lazy = true];
}
