// file: pkg/organization/proto/responses/list_members_response.proto
edition = "2023";

package gcommon.v1.organization;

import "pkg/common/proto/error.proto";
import "pkg/common/proto/paginated_response.proto";
import "pkg/organization/proto/organization_member.proto";

option go_package = "github.com/jdfalk/gcommon/pkg/organization/proto";

message ListMembersResponse {
  // Any errors encountered
  repeated gcommon.v1.common.Error errors = 1;

  // Success status
  bool success = 2;

  // List of members returned
  repeated gcommon.v1.organization.OrganizationMember members = 3 [lazy = true];

  // Pagination metadata
  gcommon.v1.common.PaginatedResponse pagination = 4;
}
