// file: pkg/organization/proto/requests/list_organizations_request.proto

edition = "2023";

package gcommon.v1.organization;

import "pkg/common/proto/request_metadata.proto";

option go_package = "github.com/jdfalk/gcommon/pkg/organization/proto";

message ListOrganizationsRequest {
  // Request metadata for tracing and context
  gcommon.v1.common.RequestMetadata metadata = 1;

  // Pagination size
  int32 page_size = 2;

  // Pagination token from previous response
  string page_token = 3;

  // Optional filter expression
  string filter = 4;
}
