// file: pkg/organization/proto/requests/update_member_request.proto
edition = "2023";

package gcommon.v1.organization;

import "google/protobuf/go_features.proto";
import "pkg/common/proto/messages/request_metadata.proto";
import "google/protobuf/field_mask.proto";
import "pkg/organization/proto/messages/organization_member.proto";

option go_package = "../../../../pb;organizationpb";
option features.(pb.go).api_level = API_HYBRID;

message UpdateMemberRequest {
  // Request metadata for tracing and context
  gcommon.v1.common.RequestMetadata metadata = 1;

  // Identifier of the member to update
  string member_id = 2;

  // Updated member information
  gcommon.v1.organization.OrganizationMember member = 3;

  // Fields to update for partial updates
  google.protobuf.FieldMask update_mask = 4;
}
