// file: pkg/organization/proto/responses/add_member_response.proto
edition = "2023";

package gcommon.v1.organization;

import "google/protobuf/go_features.proto";
import "pkg/common/proto/messages/error.proto";
import "pkg/organization/proto/messages/organization_member.proto";

option go_package = "../../../../pkg/organization/proto;organizationpb";
option features.(pb.go).api_level = API_HYBRID;

message AddMemberResponse {
  // Any errors encountered
  repeated gcommon.v1.common.Error errors = 1;

  // Success status
  bool success = 2;
  
  // Newly added member information
  gcommon.v1.organization.OrganizationMember member = 3;
}
