// file: pkg/organization/proto/responses/delete_organization_response.proto
edition = "2023";

package gcommon.v1.organization;

import "google/protobuf/go_features.proto";
import "pkg/common/proto/messages/error.proto";

option go_package = "../../../../pkg/organization/proto;organizationpb";
option features.(pb.go).api_level = API_HYBRID;

message DeleteOrganizationResponse {
  // Any errors encountered
  repeated gcommon.v1.common.Error errors = 1;

  // Success status
  bool success = 2;
  
}
