// file: pkg/organization/proto/responses/update_organization_settings_response.proto
edition = "2023";

package gcommon.v1.organization;

import "google/protobuf/go_features.proto";
import "pkg/common/proto/messages/error.proto";
import "pkg/organization/proto/messages/organization_settings.proto";

option go_package = "../../../../pkg/organization/proto;organizationpb";
option features.(pb.go).api_level = API_HYBRID;

message UpdateOrganizationSettingsResponse {
  // Any errors encountered
  repeated gcommon.v1.common.Error errors = 1;

  // Success status
  bool success = 2;
  
  // Updated settings data
  gcommon.v1.organization.OrganizationSettings settings = 3 [lazy = true];
}
