// file: proto/gcommon/v1/organization/api/get_organization_request.proto

edition = "2023";

package gcommon.v1.organization.api;

import "google/protobuf/go_features.proto";
import "proto/gcommon/v1/common/types/request_metadata.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "gcommon.v1.organization.api";

message GetOrganizationRequest {
  // Request metadata for tracing and context
  gcommon.v1.common.RequestMetadata metadata = 1;

  // Organization ID to retrieve
  string organization_id = 2;

  // Whether to include organization settings in response
  bool include_settings = 3;

  // Whether to include member count in response
  bool include_member_count = 4;

  // Whether to include tenant information
  bool include_tenants = 5;
}
