// file: proto/gcommon/v1/organization/api/update_organization_settings_request.proto

edition = "2023";

package gcommon.v1.organization.api;

import "google/protobuf/field_mask.proto";
import "google/protobuf/go_features.proto";
import "proto/gcommon/v1/common/api/request_metadata.proto";
import "proto/gcommon/v1/organization/config/organization_settings.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package gcommon.v1.organization.api;

message UpdateOrganizationSettingsRequest {
  // Request metadata for tracing and context
  gcommon.v1.common.RequestMetadata metadata = 1;

  // Organization identifier
  string organization_id = 2;

  // Updated settings
  gcommon.v1.organization.OrganizationSettings settings = 3;

  // Fields to update
  google.protobuf.FieldMask update_mask = 4;

  // Validate only without persisting if true
  bool validate_only = 5;
}
