// file: proto/gcommon/v1/organization/messages/update_organization_response.proto
// version: 1.0.0
// guid: 68d40e74-1416-4e2a-978a-5cca7cc3a71a
edition = "2023";

package gcommon.v1.organization;



import "google/protobuf/go_features.proto";
import "gcommon/v1/organization/messages/organization.proto";
import "gcommon/v1/common/messages/error.proto";



option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/organization";

/**
 * UpdateOrganizationResponse message returning the result of organization update.
 */
message UpdateOrganizationResponse {
  // Updated organization
  Organization organization = 1;

  // Any errors encountered during update
  repeated gcommon.v1.common.Error errors = 2;

  // Success status
  bool success = 3;
}
