// file: proto/gcommon/v1/organization/update_member_response.proto
// version: 1.0.0
// guid: 2fbbf7bc-2367-4682-bd06-3dc49bb463ec
edition = "2023";

package gcommon.v1.organization;

import "gcommon/v1/common/error.proto";
import "gcommon/v1/organization/organization_member.proto";
import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/sdks/go/v1/organization";

message UpdateMemberResponse {
  // Any errors encountered
  repeated gcommon.v1.common.Error errors = 1;

  // Success status
  bool success = 2;

  // Updated member details
  gcommon.v1.common.OrganizationMember member = 3;
}
